# practice_problems

./: README.md  pyproject.toml
practice_problems/: problem_one.py
tests/: test_problem_one.py  tests_problem_one.py
