[tool.poetry]
name = "practice-problems"
version = "0.1.0"
description = ""
authors = ["DouglasKrouth <douglaskrouth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
